<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--状态栏部分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/view_setting_state_bar_bg">

            <com.pybeta.daymatter.signinandsharedemo.custom.StatusBarCustom
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:showAfterSdkVersionInt="15"
                app:showAlways="false"
                android:background="@drawable/view_setting_state_bar_custom_bg"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <ImageButton
                    android:id="@+id/ib_setting_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/view_status_bar_back"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting"
                    android:textSize="@dimen/T17"
                    android:textColor="@color/view_setting_state_bar_text_color"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/view_setting_state_bar_line_bg"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/view_setting_bg">

        <RelativeLayout
            android:id="@+id/rl_language"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/view_setting_item_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_language"
                android:textColor="@color/view_setting_text_color"
                android:textSize="@dimen/T18"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"/>

            <ImageView
                android:id="@+id/iv_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/next"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="简体中文"
                android:textColor="@color/view_setting_text_color"
                android:textSize="@dimen/T18"
                android:layout_toLeftOf="@id/iv_next"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/view_setting_line_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <RelativeLayout
            android:id="@+id/rl_theme"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/view_setting_item_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personality_theme"
                android:textColor="@color/view_setting_text_color"
                android:textSize="@dimen/T18"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"/>

            <ImageView
                android:id="@+id/iv_themeNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/next"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/tv_selectorTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="蓝色"
                android:textColor="@color/view_setting_text_color"
                android:textSize="@dimen/T18"
                android:layout_toLeftOf="@id/iv_themeNext"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/view_setting_line_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/view_setting_line_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

</LinearLayout>